# freebsd-old

./: .build_test_installation.swp  .gitignore  COPYRIGHT  LOCKS  MAINTAINERS  Makefile  Makefile.inc1  Makefile.libcompat  NewFile  ObsoleteFiles.inc  README  README.md  UPDATING  buildos  installos  push  src.conf
cddl/: Makefile  Makefile.inc
contrib/libbbuf/: LICENSE  README.md  configure.ac
contrib/libbbuf/src/: Makefile.am  bbuf.c  bbuf.h
contrib/libbbuf/test/: Kyuafile  Makefile  atf_bbuf.c
crypto/: README
diffs/: full_diffs  name_diffs
etc/: Makefile  amd.map  apmd.conf  csh.cshrc  csh.login  csh.logout  ddb.conf  devd.conf  devfs.conf  dhclient.conf  disktab  fbtab  freebsd-update.conf  ftpusers  gettytab  group  hosts  hosts.allow  hosts.equiv  hosts.lpd  inetd.conf  libalias.conf  login.access  login.conf  mac.conf  man.alias  master.passwd  netconfig  netstart  network.subr  networks  newsyslog.conf  nscd.conf  nsmb.conf  nsswitch.conf  ntp.conf  opieaccess  pccard_ether  pf.os  phones  (+21 more)
experiments/: kernel_pipe  named_pipe_kernel.c  named_pipe_userspace.c  reader  reader.c  user_pipe  writer  writer.c
games/: Makefile  Makefile.inc
gnu/: Makefile  Makefile.inc
include/: Makefile  _ctype.h  complex.h  ctype.h  dirent.h  grp.h  hesiod.h  iconv.h  ifaddrs.h  inttypes.h  langinfo.h  link.h  malloc_np.h  netdb.h  paths.h  pthread.h  res_update.h  resolv.h  search.h  semaphore.h  setjmp.h  signal.h  stdatomic.h  stddef.h  stdio.h  stdlib.h  string.h  stringlist.h  strings.h  termios.h  tgmath.h  ttyent.h  unistd.h  unwind.h  wchar.h  wctype.h
(+26487 files in other folders)
